Use position: fixed for submenu
That way it can overlap the rest of the UI. It needs translate to shift
from its position, tho, as "left" would position it relative to the left
edge of the viewport rather than its current position.

--- a/frontend/assets/css/styles.css
+++ b/frontend/assets/css/styles.css
@@ -714,11 +714,11 @@ li.nav-menu-item a:hover {
 }
 
 .ui-submenu {
-  position: absolute;
-  left: -10em;
+  position: fixed;
   width: 25em;
   min-height: 3em;
   z-index: 2;
+  transform: translate(-7em, 0);
 }
 
 .ui-submenu h4 {
